# bot-boca-jrs

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
.claude/agents/: api-polling-agent.md  browser-stealth-agent.md  orchestrator-agent.md  svg-map-agent.md
config/: settings.py
core/: bot_instance.py
utils/: api.py  browser.py  cart.py  human.py  svg.py
